<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="action_update">update</string>
    <string name="add_back_fields">Add back field</string>
    <string name="add_barcode">add Barcode</string>
    <string name="add_footer_image">add footer image</string>
    <string name="add_front_field">Add front field</string>
    <string name="add_header_image">add header image</string>
    <string name="add_logo_image">add logo image</string>
    <string name="app_name">PassAndroid</string>
    <string name="barcode">barcode</string>
    <string name="barcode_edit_aztec">AZTEC</string>
    <string name="barcode_edit_button_add_barcode">Add Barcode</string>
    <string name="barcode_edit_code128">code 128</string>
    <string name="barcode_edit_code39">code 39</string>
    <string name="barcode_edit_hint_alternative_message">alternative Message</string>
    <string name="barcode_edit_message">Message</string>
    <string name="barcode_edit_pdf417">PDF417</string>
    <string name="barcode_edit_qr">QR</string>
    <string name="barcode_edit_random">random</string>
    <string name="barcode_edit_scan">scan</string>
    <string name="boarding_pass">Boarding Pass</string>
    <string name="cannot_be_empty">cannot be empty</string>
    <string name="categories_nav">%d Categories</string>
    <string name="categories_voucher">voucher</string>
    <string name="category_coupon">Coupon</string>
    <string name="category_event">Event</string>
    <string name="category_generic">generic</string>
    <string name="category_none">no Category</string>
    <string name="category_storecard">Store Card</string>
    <string name="change_color_dialog_title">Select color</string>
    <string name="choose_location">Choose Location</string>
    <string name="delete">Delete!</string>
    <string name="dialog_delete_confirm_delete_source_checkbox">also delete source?</string>
    <string name="dialog_delete_confirm_text">Do you really want to delete this passbook?</string>
    <string name="dialog_delete_title">Sure?</string>
    <string name="downloading_new_pass_version">downloading new pass version</string>
    <string name="drawer_close">close</string>
    <string name="drawer_open">open</string>
    <string name="edit_barcode_dialog_title">Edit BarCode</string>
    <string name="edit_location">edit location</string>
    <string name="edit_time">edit time</string>
    <string name="empty_text_view"><b><big>No pass yet</big></b>" 


 You can search your phone for passes 

 or create your own 

 or try a demo pass 

 just press + down below "</string>
    <string name="empty_trash_dialog_message">"Really empty trash? You cannot restore "</string>
    <string name="empty_trash_dialog_title">warning</string>
    <string name="emtytrash_label">empty trash</string>
    <string name="expiration_date_to_calendar_warning_message">You are about to add the expiration-date to the calendar - If you think there is a better date in this pass - please send it to me - PassAndroid needs to know where this</string>
    <string name="expiration_date_to_calendar_warning_title">Add Expiration-Date</string>
    <string name="fab_choice_add_demo_pass">Add Demo-Pass</string>
    <string name="fab_choice_create_pass">Create Pass</string>
    <string name="fab_choice_scan_pkpass_files">Scan for pkpass files</string>
    <string name="field_advice_label">advice</string>
    <string name="field_advice_text">demand esPass or Passbook from your vendor</string>
    <string name="field_note">note</string>
    <string name="field_note_image">This is imported from a image - not a real pass</string>
    <string name="field_note_pdf">This is imported from a PDF - not a real pass</string>
    <string name="field_source">source</string>
    <string name="field_source_image">Image</string>
    <string name="field_source_pdf">PDF</string>
    <string name="found__pass">And %d more</string>
    <string name="found_pass">found: %s</string>
    <string name="help_content" formatted="false">"&lt;h1>What is it?&lt;/h1> This app is a viewer for passbooks - a passbook could be a e.g. &lt;b>boarding-pass&lt;/b> for your next flight, a coupon for a nice hot beverage on the destination, a movie ticket, a membership card - there are a lot of possibilities. Basically it is a replacement for a piece of paper or plastic you would normally have to carry with you - so lets save some trees and &lt;b>reduce waste!&lt;/b> &lt;h1>Example passes&lt;/h1> Do you need some passes to play around and see things in action? &lt;a href='http://espass.it/examples/'>Here are some&lt;/a> for you! &lt;h1>How does it work?&lt;/h1> There are so called pkpass files - you can open them with this app - e.g. when you receive them via email or get an Download-option. The most important content is the BarCode ( QR , AZTEC &amp; PDF417which authorizes you most of the time - but it also has other interesting content like a description - often a time (hat you now can add to your calendar - often also locations (o give you directions) - just try It out! The app is offline usable once you downloaded the pass! &lt;h1>FAQ&lt;/h1> &lt;h2>How can I transfer passbooks from iPhone to PassAndroid?&lt;/h2> &lt;ol> &lt;li>Open the passbook on the iPhone&lt;/li> &lt;li>Click on the share icon in the bottom left corner.&lt;/li> &lt;li>Send you a mail with the passbook which your Android device can receive.&lt;/li> &lt;li>Open the new mail on your Android device and save the attachment.&lt;/li> &lt;li>Let PassAndroid scan for passbooks.&lt;/li> &lt;li>The new passbook is visible in PassAndroid.&lt;/li> &lt;/ol> &lt;H1>Credits&lt;/H1> Big thanks to &lt;a href=http://ltorrecilla.com/>Luis Torrecilla&lt;/a> for the Design &amp; &lt;a href=https://github.com/cketti>Cketti&lt;/a> &amp; &lt;a href=https://github.com/simontb>Simon Tenbeitel&lt;/a> for pull-requests! &lt;H1>Feedback&lt;/H1> Give feedback in the &lt;a href='https://plus.google.com/communities/116353894782342292067'>Google+ Community&lt;/a> or you can drop the &lt;a href='mailto:ligi@ligi.de'>author a mail.&lt;/a> If you like the app rate it on &lt;a href='https://play.google.com/store/apps/details?id=org.ligi.ticketviewer'>Google Play&lt;/a> I also would love to hear stories about where you used this app. &lt;h1>History&lt;/h1> I stumbled upon Passbook files when i received my ticket for the 29c3 - I liked the Idea - but there was no Android App which was working for me. I saw that the implementation is quite easy ( just a zip container with json and images ) - The first version was build very quick &amp; was working for me ( got entry to 29C3 ) - In the following year I have not worked on this app much as I had no real use-cases but there where a lot of users downloading the app ( nearly 100k now ) and I fixed processing of some passes that where send to me ( some passes contain really broken json .. ) One year later - just before the 30C3 - I came to work a bit on this app again - for 2 reasons: - a friend of mine is very into this whole BTLE thing and location beacon / context aware thing could be interesting for Passbook - but nothing ready yet - I got a mail from a nice designer who did a nice redesign This all was leading to PassAndroid - a completely new version - with a new look and new functions (sorting and adding to calendar alongside pull to refresh a navigation drawer and contextual ActionBar menu &lt;H1>More&lt;/H1> This app ist best launched with &lt;a href='https://play.google.com/store/apps/details?id=org.ligi.fast&amp;referrer=utm_source%3Dticketview%26utm_medium%3Dapp'>FAST App Search Tool&lt;/a> which is available for free and needs not a single permission! &lt;H1>Legal&lt;/H1>This app is not affiliated with Apple - Passbook might be Trademark by Apple, but introduced like a standard so this should be OK &lt;br/> THIS SOFTWARE IS PROVIDED AS IS AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE."</string>
    <string name="help_label">Help</string>
    <string name="image_import">Image Import</string>
    <string name="invalid_passbook_title">Invalid Passbook</string>
    <string name="launcher_shortcut">Launcher shortcut</string>
    <string name="leak_canary_analysis_failed">Leak analysis failed</string>
    <string name="leak_canary_class_has_leaked">%1$s leaked %2$s</string>
    <string name="leak_canary_could_not_save_text">LeakCanary was unable to save the analysis result.</string>
    <string name="leak_canary_could_not_save_title">Could not save result.</string>
    <string name="leak_canary_delete">Delete</string>
    <string name="leak_canary_delete_all">Delete all</string>
    <string name="leak_canary_delete_all_leaks_title">Are you sure you want to delete all leaks?</string>
    <string name="leak_canary_display_activity_label">Leaks</string>
    <string name="leak_canary_excluded_row">[Excluded] %s</string>
    <string name="leak_canary_failure_report">"Please report this failure to http://github.com/square/leakcanary
"</string>
    <string name="preference_autolight_summary">Should I increase brightness when showing barcode?</string>
    <string name="preference_autolight_title">Automatic light</string>
    <string name="preference_condensed_summary">Should I show more detail and less clutter?</string>
    <string name="preference_condensed_title">Condensed mode</string>
    <string name="preference_daynight_summary">Should I be dark or light?</string>
    <string name="preference_daynight_title">Day/Night theme</string>
    <string name="preference_sort_summary">How should I sort the passes?</string>
    <string name="preference_sort_title">Sort order</string>
    <string name="preference_key_autolight">AUTOLIGHT</string>
    <string name="preference_key_condensed">CONDENSED</string>
    <string name="preference_key_nightmode">NIGHTMODE</string>
    <string name="preference_key_sort">SORT</string>
</resources>