<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/preference_autolight_title" android:key="@string/preference_key_autolight" android:summary="@string/preference_autolight_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/preference_condensed_title" android:key="@string/preference_key_condensed" android:summary="@string/preference_condensed_summary" />
    <ListPreference android:entries="@array/sort_orders" android:title="@string/preference_sort_title" android:key="@string/preference_key_sort" android:summary="@string/preference_sort_summary" android:defaultValue="0" android:entryValues="@array/sort_order_keys" />
    <ListPreference android:entries="@array/night_modes" android:title="@string/preference_daynight_title" android:key="@string/preference_key_nightmode" android:summary="@string/preference_daynight_summary" android:defaultValue="auto" android:entryValues="@array/nightmode_keys" />
</PreferenceScreen>